@@ -254,9 +254,7 @@ notify_job (Job *job)
 
 		NIH_MUST (message = upstart_message_new (
 				  control_io, sub->pid, UPSTART_JOB_STATUS,
-				  job->name, job->goal, job->state,
-				  job->process_state, job->pid,
-				  job->description));
+				  job->name, job->goal, job->state, job->pid));
 		nih_io_send_message (control_io, message);
 	}
 
@@ -278,9 +276,8 @@ notify_job (Job *job)
 
 		NIH_MUST (message = upstart_message_new (
 				  control_io, sub->pid,
-				  UPSTART_EVENT_JOB_STATUS,
-				  job->cause->id, job->name, job->goal,
-				  job->state, job->pid));
+				  UPSTART_EVENT_JOB_STATUS, job->cause->id,
+				  job->name, job->goal, job->state, job->pid));
 		nih_io_send_message (control_io, message);
 	}
 }
