@@ -1,5 +1,9 @@
 2007-02-08  Scott James Remnant  <scott@netsplit.com>
 
+	* init/notify.c (notify_job): Don't include process state or
+	description in the job status message anymore.
+	* init/tests/test_notify.c (check_job_status, test_job): Update tests
+
 	* init/cfgfile.c (cfg_read_job): Drop the copying of the process_state
 	member, since it doesn't exist anymore.
 	* init/tests/test_cfgfile.c (test_read_job): Drop the check too.
